# Backbase

django_project/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
django_project/MyCurrency/: admin.py  admin_site.py  api.py  apps.py  forms.py  models.py  serializers.py  urls.py
django_project/MyCurrency/management/: __init__.py
django_project/MyCurrency/management/commands/: __init__.py  load_historical.py
django_project/MyCurrency/migrations/: 0001_initial.py  0002_provider_alter_currencyexchangerate_unique_together_and_more.py  0003_currencyconverterproxy.py  0004_delete_currencyconverterproxy.py
django_project/MyCurrency/services/: adapters.py  async_historical_loader.py  exchange_rates.py
django_project/MyCurrency/templates/admin/: currency_converter.html
django_project/MyCurrency/templates/admin/MyCurrency/currency/: change_list.html
django_project/MyCurrency/tests/: test_api.py  test_models.py  test_services.py
django_project/config/: settings.py  urls.py
